<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="eating_or_not">吃否 </string>
    <string name="app_name">吃 否</string>
    <string name="tip_text">请选择您需要查询的病名 </string>
    <string name="lei_feng_shi_xing_guan_jie_yan">类风湿性关节炎 </string>
    <string name="gao_xue_ya">高血压 </string>
    <string name="gao_xue_zhi">高血脂 </string>
    <string name="guan_xin_bing">冠心病 </string>
    <string name="zhi_fang_gan">脂肪肝</string>
    <string name="tong_feng">痛风 </string>
    <string name="yun_qi">孕期</string>
    <string name="tang_niao_bing">糖尿病</string>
    <string name="search">搜 索</string>
    <string name="tip_food_name">请输入食物名称 </string>
    <string name="back">返 回</string>
    <string name="hot_food">热门食物</string>
    <string name="details_reason">详细原因 </string>
    <string name="eat_amount">摄入量</string>
    <string name="rec_foods_macth">推荐食物搭配 </string>
    <string name="foods_macth_fitornot">食物搭配宜忌 </string>
    <string name="rec_foods">推荐食物 </string>
    <string name="replace_foods">替代食物 </string>    
    <string name="eat_skill">食用技巧</string> 
    <string name="eat_action">食用禁忌 </string> 
    <string name="info_source">信息来源 </string>
    <string name="my_favor">我的收藏 </string>
    <string name="sb_favor">的收藏</string>
    <string name="favor">收藏 </string>
    <string name="delecting_favor">正在删除收藏.... </string>
    <string name="delected_favor_failed">删除收藏失败 </string>
    <string name="delected_favor_suc">删除收藏成功 </string>
    <string name="add_favor_success">添加收藏成功 </string>
    <string name="add_favor_failed">收藏失败 </string>     
    <string name="cancel_favor_success">取消收藏成功 </string>             
    <string name="cancel_favor_failed">取消收藏失败 </string>
    
    <string name="cancel_success">取消成功 </string> 
    <string name="cancel_failed">取消失败</string>             
    <string name="set_failed">设置失败 </string>
    <string name="set_success">设置成功 </string> 
    
    <string name="set_default_disease">设为默认 </string>             
    <string name="cancel_default_disease">取消默认 </string>
    <string name="tip_for_set_default_disease">当前默认病是%s,你要覆盖它么？</string>
    <string name="tip_for_input_null">输入不能为空</string>
    <string name="test_string">test string test string test string test string test string test string test string test string test string test string test string test string test string test string test string test string test string test string test string test string test string test string test string test string </string>
    <string name="none">暂无内容</string>
    <string name="search_ret">搜索结果</string>
    <string name="search_null_ret">没有找到符合条件的结果</string>
    <string name="tip_search">搜索：</string>
    <string name="tip_for_searching">正在加载数据,请稍后....</string>
    <string name="click_again_to_qiut">再按一次返回键退出.</string>
    <string name="fit_reason">原因：</string>
    <string name="rec_eat_amount">建议摄入量：</string>
    <string name="hot_food_downloading">亲，正在获取热门食物，稍等哈~</string>
    <string name="hot_food_download_failed">亲，食物获取失败了。</string>
    <string name="sweat_tip">温馨提示</string>
    <string name="all_disease">全部</string>
    <string name="text_edit">编辑</string>
    <string name="delete_selected">删除已选</string>
    <string name="food_detail_loading">正在获取详细内容...</string>
    <string name="weibo_repeat_content">内容已经分享</string>
    <string name="weibo_logging">请先登录微博</string>
    <string name="weibo_loggin_scs">微博登录成功</string>
    <string name="weibo_loggin_error">微博登录失败</string>
    <string name="weibo_author_scs">微博授权成功</string>
    <string name="change_weibo_user">切换微博用户</string>
	<string name="login_text">登录</string>
	<string name="user_login">用户登录</string>
	<string name="user_register">用户注册</string>
	<string name="please_logging">请先登录</string>
	<string name="login_failed">登录失败,账号或密码错误</string>
	<string name="login_scs">登录成功</string>
	<string name="forget_psw">忘记密码</string>
	<string name="register_text">注册</string>
	<string name="email_sending">邮件发送中...</string>
	<string name="email_have_send">验证已发送到你的邮箱，请前往更改。</string>
	<string name="email_have_send_failed">邮件发送失败，账号不存在或网络错误。请重试。</string>
	<string name="register_failed">注册失败</string>
	<string name="email_had_reg">邮箱已被注册</string>
	<string name="register_scs">注册成功</string>
	<string name="hint_for_email_name">邮箱名,如:example@host.com</string>
	<string name="email_name">邮箱名</string>
	<string name="email_name_error">邮箱名格式错误。</string>
	<string name="password">密码</string>
	<string name="hint_for_password">密码需六位以上字符</string>
	<string name="password_error">密码错误</string>
	<string name="password_text_error">密码格式错误</string>
	<string name="user_name_text_error">用户名格式错误</string>
	<string name="network_is_not_ok">网络不可用</string>
	<string name="server_connect_failed">服务器连接失败</string>
	<string name="user_name">用户名</string>	
	<string name="user_center">个人中心</string>
	<string name="feedback">建议反馈</string>
	<string name="user_img_is_not_open">sorry,头像暂时不能修改。</string>
	<string name="your_feedback">你的建议反馈:</string>
	<string name="your_contact">你的联系方式:</string>
	<string name="hint_for_feedback">感谢您给我们的建议，使我们能更好地为您服务，我们将尽快处理.</string>
	<string name="hint_for_contact">留下您的QQ号或手机号，如有需要，我们的客服将与您联系.</string>
	<string name="hint_for_share">分享点什么吧.</string>
	<string name="tip_for_share">#吃否，对症科学吃#\n你知道么？%s\n</string>
	<string name="tip_for_share2">进入http://eatornot.cn/disfood/%s/view 了解更多内容，让您健康饮食每一天。</string>
	<string name="share_our_app">刚下载了@ecube吃否，能够对症查询食物是否适宜食用，还能查看别人的食用经验，解决了生活中的食物盲区啊，推荐大家下载用用：http://www.wandoujia.com/apps/com.android.eatingornot.activitys</string>
	<string name="er_wei_ma_url">http://img.wdjimg.com/mms/qrcode/com.android.eatingornot.activitys/download</string>
	<string name="uploading_suc">提交反馈成功，感谢你的支持</string>
	<string name="uploading_failed">提交反馈失败</string>
	<string name="uploading_feedback">正在提交反馈....</string>
	<string name="loading">loading....</string>
	<string name="submit">提交</string>
	<string name="login_out">注销</string>
	<string name="bangding_weibo">绑定微博</string>
	<string name="create_us_at_weibo">关注吃否官方微博</string>
	<string name="share_app_to_weibo">发微博分享</string>	
	<string name="bangding_weibo_failed">绑定失败;微博可能已被绑定。</string>
	<string name="un_bangding_weibo">解除绑定</string>
	<string name="un_bangding_weibo_failed">解除失败</string>
	<string name="un_bangding_weibo_suc">解除成功</string>
	<string name="un_bangding_weibo_suc">解除成功</string>
	<string name="want_to_un_bangding_weibo">你希望解除当前绑定，切换账号么？</string>
	<string name="want_to_login_out_weibo">你希望切换微博账号么？</string>
	<string name="is_doing">正在执行。。。</string>
	<string name="ok">确定</string>
	<string name="cancel">取消</string>
	<string name="tip_for_login_out">你想退出登录？</string>
	<string name="give_us_appraise">给我们评价</string>
	<string name="can_login_in_web"></string>
	<string name="web_site">可以登录网页版  http://eatornot.cn/ ，享用更多网站功能，查看更多健康食用经验。</string>
	<string name="get_info_in_web"></string>
	<string name="click_to_change_img">点击修改头像</string>
	
	<string name="action_setup">启动</string>
	<string name="action_view">查看</string>
	<string name="action_search">搜索</string>
	<string name="action_share">分享</string>
	<string name="action_weibo_login">微博登录</string>
	<string name="action_appraise">评价</string>
	
	<string name="UserLoginOut">用户退出登录</string>
	<string name="appraise_at_market">市场评价</string>
	<string name="EattingOrNot">吃否主页</string>
	<string name="SearchFood">搜索页面</string>
	<string name="SearchRet">搜索结果页面</string>
	<string name="FoodDetail">食物详细页面</string>
	<string name="FavorList">收藏列表页面</string>
	<string name="UserCenter">用户中心页面</string>
	<string name="UserLogin">用户登录页面</string>
	<string name="ForgetPsw">忘记密码页面</string>
	<string name="UserRegister">用户注册页面</string>	
	<string name="UserFeedback">用户反馈页面</string>
</resources>
