<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
     >

  <include layout="@layout/customs_title" android:id="@+id/title"/>
  
  <LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:layout_below="@id/title"
  android:padding="10dp"
  >
 				
	  			<LinearLayout 
	  			    android:layout_width="fill_parent"
	  			    android:layout_height="fill_parent"
	  			    android:background="@drawable/bg1"
	  			    android:layout_marginTop="10dp"	  			    
	  			    android:orientation="vertical"
	  			    android:padding="20dp"
	  			    >
	  			 <LinearLayout 
			  		    android:layout_width="fill_parent"
			  		    android:layout_height="wrap_content"
			  		    android:orientation="horizontal"
			  		    >
			  		    
			  		    <ImageView 
			  		        android:layout_width="wrap_content"
			  		        android:layout_height="wrap_content"
			  		        android:src="@drawable/touxiang"
			  		        android:id="@+id/user_head"
			  		        />
			  		    <TextView 
			  		        android:layout_width="wrap_content"
			  		        android:layout_height="wrap_content"
			  		        android:text="@string/eating_or_not"
			  		        android:layout_gravity="center_vertical"
			  		        android:layout_marginLeft="10dp"
			  		        android:layout_weight="1.0"
			  		        android:id="@+id/username"
			  		        android:gravity="center"
			  		        />
			  		    <Button 
			  		        android:layout_width="wrap_content"
			  		        android:layout_height="wrap_content"
			  		        android:background="@drawable/search_btn_seletor"
			  		        android:text="@string/login_out"
			  		        android:layout_gravity="center_vertical"
			  		        android:paddingLeft="10dp"
			  		        android:paddingRight="10dp"
			  		        android:id="@+id/btn_login_out"
			  		        android:textColor="#eee"
			  		        />
			  		    <Button 
			  		        android:layout_width="wrap_content"
			  		        android:layout_height="wrap_content"
			  		        android:background="@drawable/search_btn_seletor"
			  		        android:text="@string/bangding_weibo"
			  		        android:layout_gravity="center_vertical"
			  		        android:paddingLeft="10dp"
			  		        android:paddingRight="10dp"
			  		        android:id="@+id/btn_bangding"
			  		        android:textColor="#eee"
			  		        android:visibility="gone"
			  		        />
			  		</LinearLayout>
			  		<LinearLayout 
			  		    android:layout_width="fill_parent"
			  		    android:layout_height="wrap_content"
			  		    android:orientation="vertical"
			  		    android:background="@drawable/bg_editor"
			  		    android:layout_marginTop="20dp"
			  		    >
			  		    <Button 
			  		        android:layout_width="fill_parent"
			  		        android:layout_height="wrap_content"
			  		        android:drawableRight="@drawable/right_arrow"
			  		        android:background="#0000"
			  		        android:text="@string/give_us_appraise"
			  		        android:gravity="left"
			  		        android:padding="5dp"
			  		        android:id="@+id/btn_appraise"
			  		        android:textAppearance="@android:style/TextAppearance.Medium"
			  		        />
			  		    <ImageView 
			  		        android:background="@drawable/content_divider"
			  		        android:layout_width="fill_parent"
			  		        android:layout_height="wrap_content"
			  		        />
			  		    <Button 
			  		        android:layout_width="fill_parent"
			  		        android:layout_height="wrap_content"
			  		        android:drawableRight="@drawable/right_arrow"
			  		        android:background="#0000"
			  		        android:text="@string/feedback"
			  		        android:gravity="left"
			  		        android:padding="5dp"
			  		        android:id="@+id/btn_feedcak"
			  		        android:textAppearance="@android:style/TextAppearance.Medium"
			  		        />
	  			    </LinearLayout> 
	  			    
			  		<LinearLayout 
			  		    android:layout_width="fill_parent"
			  		    android:layout_height="wrap_content"
			  		    android:orientation="horizontal"
			  		    android:background="@drawable/bg_editor"
			  		    android:layout_marginTop="20dp"
			  		    >
			  		    
			  		    <TextView 
			  		    	android:layout_width="wrap_content"
			  		    	android:layout_height="wrap_content"
			  		    	android:text="@string/can_login_in_web"
			  		        />
			  		    <TextView 
			  		    	android:layout_width="wrap_content"
			  		    	android:layout_height="wrap_content"
			  		    	android:text="@string/web_site"
			  		    	android:autoLink="all"
			  		    	android:id="@+id/web_site"

			  		        />
			  		    <TextView 
			  		    	android:layout_width="wrap_content"
			  		    	android:layout_height="wrap_content"
			  		    	android:text="@string/get_info_in_web"
			  		        />
			  		</LinearLayout>
			  		
	  			</LinearLayout>

  </LinearLayout>
<LinearLayout 
    android:layout_alignParentBottom="true"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:visibility="gone">
    <include layout="@layout/customs_navibar"/>    
</LinearLayout>
</RelativeLayout>
