<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

   <!--  <include layout="@layout/customs_title" /> -->
   <RelativeLayout
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:padding="5dip"
	  android:id="@+id/title_rel_layout"
	  android:background="@drawable/header_null"
  >
  <Button
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:id="@+id/title_btn_left"
  		android:layout_alignParentLeft="true"
  		android:layout_centerVertical="true"
  		android:background="@drawable/title_btn_seletor"
  		android:text="@string/back"
  		android:textSize="18sp"
  		android:gravity="center"
		android:visibility="invisible"
		android:textColor="#FFF"
		android:shadowColor="#000"
		android:shadowDx="0"
		android:shadowDy="1"
		android:shadowRadius="1"
		android:paddingBottom="-10dp"

  ></Button>

  	<Button
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:id="@+id/title_btn_right"
  		android:layout_alignParentRight="true"
  		android:layout_centerVertical="true"
  		android:background="@drawable/title_btn_seletor"
		android:textColor="#fff"
  		android:textSize="18sp"
  		android:gravity="center"
		android:visibility="invisible"
		android:shadowColor="#000"
		android:shadowDx="0"
		android:shadowDy="1"
		android:shadowRadius="1"
		android:paddingBottom="-2dp"
  		></Button>
  	<LinearLayout 
  	    android:layout_width="fill_parent"
  	    android:layout_height="wrap_content"
  	    android:layout_toRightOf="@id/title_btn_left"
  	    android:layout_toLeftOf="@id/title_btn_right"
  	    android:layout_centerInParent="true"
  	    android:gravity="center"
  	    >
  		  <TextView 
		  	android:id="@+id/title_text"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	android:textSize="24sp"
			android:text="@string/eating_or_not"
		  	android:singleLine="true"
		  	android:maxWidth="240dip"
		  	android:ellipsize="marquee"
		  	android:marqueeRepeatLimit="marquee_forever"
		  	android:scrollHorizontally="true"
		  	android:focusableInTouchMode="true"
		  	android:focusable="true"
		  	android:padding="3dip"
		  	android:gravity="center" 
		  	android:textColor="#752" 
		  	android:layout_gravity="center"
		></TextView>
  		 <TextView 
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	android:textSize="24sp"
			android:text="@string/sb_favor"
		  	android:singleLine="true"
		  	android:maxWidth="240dip"
		  	android:ellipsize="marquee"
		  	android:marqueeRepeatLimit="marquee_forever"
		  	android:scrollHorizontally="true"
		  	android:focusableInTouchMode="true"
		  	android:focusable="true"
		  	android:padding="3dip"
		  	android:gravity="center" 
		  	android:textColor="#752" 
		  	android:layout_gravity="center"
		></TextView>
  	</LinearLayout>
  	</RelativeLayout>
   
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        >
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dp"
        android:layout_marginBottom="50dp"
        >
   	<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg1"
        android:orientation="vertical"
        android:id="@+id/favor_list_layout"
        >
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:padding="10dp"
            />       
	  	<ListView 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:divider="@drawable/divider"
	        android:id="@+id/favor_list"
	        android:cacheColorHint="#0000"
	        android:scrollbars="none"
	        android:listSelector="@color/transparent"
	        ></ListView>
        </LinearLayout>
	                <LinearLayout
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:orientation="horizontal"
						android:paddingTop="10dp"
						android:paddingBottom="2dp"
	                    android:id="@+id/favor_bar"
	                    android:layout_marginRight="5dp"
	                    android:layout_marginLeft="3dp"
	                     android:layout_marginTop="10dp"
	                    >

	                <RelativeLayout 
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:orientation="horizontal"
			            android:background="@drawable/repeat_wood"
			             
	                >
	                <TextView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:drawableLeft="@drawable/collected"
	                    android:drawablePadding="5dp"
	                    android:text="0"
	                    android:layout_centerVertical="true"
	                    android:paddingLeft="10dp"
	                    android:textSize="18sp"
	                    android:id="@+id/favor_number"
	                    />
	                <TextView 
	                    android:layout_width="120dp"
	                    android:layout_height="wrap_content"
						android:layout_alignParentRight="true"
						android:layout_marginRight="10dp"
						android:background="@drawable/bg_favor_ill"
						android:text="@string/all_disease"
						android:drawableRight="@drawable/xiala"
						android:layout_centerVertical="true"
						android:gravity="center"
						android:textSize="18sp"
						android:id="@+id/current_ill"
						android:textColor="#FFF"
	                    />
	                </RelativeLayout>
	                <TextView 
	                    android:background="@drawable/right_wood"
	                    android:layout_width="wrap_content"
	                    android:layout_height="fill_parent"
	                    android:id="@+id/right_wood"
	                    />
	                    
	                </LinearLayout>
	                <ListView 
					        android:layout_width="120dp"
					        android:layout_height="wrap_content"
					        android:divider="@drawable/line"
					        android:id="@+id/ill_list"
					        android:cacheColorHint="#0000"
					        android:layout_below="@id/favor_bar"
					        android:layout_alignParentRight="true"
					        android:background="@drawable/bg_favor_ill"
					        android:layout_marginTop="-5dp"
					        android:layout_marginRight="15dp"
					        ></ListView>
         </RelativeLayout>
	  <LinearLayout
  	    android:layout_width="fill_parent"
  	    android:layout_height="wrap_content"
  	    android:layout_alignParentBottom="true" >
  	    <include layout="@layout/customs_navibar" />
  	</LinearLayout>
        </RelativeLayout>
</LinearLayout>